fix search container not responsive

--- a/css/layout/side-bar.css
+++ b/css/layout/side-bar.css
@@ -14,6 +14,7 @@
   padding: 42px;
   position: absolute;
   height: 100%;
+  width: 100%;
   background: var(--white);
   z-index: 10;
   left: -100%;
